Add video and documents internationalization support

--- a/templates/web/soluciones/item.html
+++ b/templates/web/soluciones/item.html
@@ -1,284 +1,4 @@
-{% load imagekit i18n %}
+{% load imagekit i18n custom_operators %}
 {% get_current_language as LANGUAGE_CODE %}
-<div class="col-12 col-md-6 col-lg-4 p-1">
-    <div class="card card-body item">
-        <h5 class="card-title">
-            {% if LANGUAGE_CODE == 'en' %}
-                {% if item.nombre_en %}
-                    {% if item.categoria %}{{ item.nombre_en|title }}{% else %}{{ item.nombre_en|upper }}{% endif %}
-                {% else %}
-                    {% if item.categoria %}{{ item.nombre|title }}{% else %}{{ item.nombre|upper }}{% endif %}
-                {% endif %}
-            {% else %}
-                {% if item.categoria %}{{ item.nombre|title }}{% else %}{{ item.nombre|upper }}{% endif %}
-            {% endif %}
-        </h5>
-        <div class="row mb-4">
-            {% if item.imagen_principal %}
-                <div class="col-12 text-center">
-                    <a href="#" data-toggle="modal" data-target="#{{ item.id|slugify }}-{{ item.nombre|slugify }}">
-                        <img
-                                class="img-fluid"
-                                data-src="{{ item.imagen_principal.url }}"
-                                {% if LANGUAGE_CODE == 'en' %}
-                                    {% if item.nombre_en %}
-                                alt="Image profile item solution of {{ item.nombre_en }}"
-                                    {% else %}
-                                alt="Imagen perfil item solución de {{ item.nombre }}"
-                                    {% endif %}
-                                {% else %}
-                                alt="Imagen perfil item solución de {{ item.nombre }}"
-                                {% endif %}
-                        >
-                    </a>
-                </div>
-            {% endif %}
-
-
-            <div class="col-12 mt-2 mb-2">
-                <p class="card-text text-justify">
-                    {% if LANGUAGE_CODE == 'en' %}
-                        {% if item.descripcion_corta_en %}
-                            {{ item.descripcion_corta_en }}
-                        {% else %}
-                            {{ item.descripcion_corta }}
-                        {% endif %}
-                    {% else %}
-                        {{ item.descripcion_corta }}
-                    {% endif %}
-                </p>
-            </div>
-
-            {% with imagenes_lista=item.mis_imagenes.all|dictsort:"orden"|slice:":3" %}
-                {% if imagenes_lista %}
-                    <div class="col-12 pl-4 pr-4">
-                        <div class="galeria">
-                            <div class="mdb-lightbox">
-                                <div class="row">
-                                    {% for imagen in imagenes_lista %}
-                                        {% if imagen.imagen %}
-                                            {% if imagen.marca_agua == 1 %}
-                                                {% generateimage 'webpage:watermark' source=imagen.imagen as imagen_procesada %}
-                                            {% elif imagen.marca_agua == 2 %}
-                                                {% generateimage 'webpage:watermark_orange' source=imagen.imagen as imagen_procesada %}
-                                            {% else %}
-                                                {% generateimage 'webpage:normal' source=imagen.imagen as imagen_procesada %}
-                                            {% endif %}
-
-                                            <figure class="col-4 col-md-4 p-1 m-0 d-none d-sm-block">
-                                                <a href="{{ imagen_procesada.url }}"
-                                                   data-size="{{ imagen_procesada.width|stringformat:"d" }}x{{ imagen_procesada.height|stringformat:"d" }}">
-                                                    <div class="view overlay hm-white-slight z-depth-2">
-                                                        <img data-src="{{ imagen.imagen_thumbnail.url }}"
-                                                                {% if LANGUAGE_CODE == 'en' %}
-                                                                    {% if imagen.alt_seo_en %}
-                                                             alt="{{ imagen.alt_seo_en }}"
-                                                                    {% else %}
-                                                                        {% if imagen.alt_seo %}
-                                                             alt="{{ imagen.alt_seo }}"
-                                                                        {% endif %}
-                                                                    {% endif %}
-                                                                {% else %}
-                                                                    {% if imagen.alt_seo %}
-                                                             alt="{{ imagen.alt_seo }}"
-                                                                    {% endif %}
-                                                                {% endif %}
-                                                        >
-                                                    </div>
-                                                </a>
-                                                <div class="caption">
-                                                    <h3>
-                                                        {% if LANGUAGE_CODE == 'en' %}
-                                                            {% if item.nombre_en %}
-                                                                {{ item.nombre_en|upper }}
-                                                            {% else %}
-                                                                {{ item.nombre|upper }}
-                                                            {% endif %}
-                                                        {% else %}
-                                                            {{ item.nombre|upper }}
-                                                        {% endif %}
-                                                    </h3>
-                                                    {% if LANGUAGE_CODE == 'en' %}
-                                                        {% if imagen.descripcion_en %}
-                                                            <p>{{ imagen.descripcion_en }}</p>
-                                                        {% else %}
-                                                            <p>{{ imagen.descripcion }}</p>
-                                                        {% endif %}
-                                                    {% else %}
-                                                        <p>{{ imagen.descripcion }}</p>
-                                                    {% endif %}
-                                                </div>
-                                            </figure>
-                                        {% endif %}
-                                    {% endfor %}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endif %}
-            {% endwith %}
-        </div>
-        <div class="ver_mas">
-            <a href="#" class="black-text d-flex flex-row-reverse" data-toggle="modal"
-               data-target="#{{ item.id|slugify }}-{{ item.nombre|slugify }}">
-                <h5 class="waves-effect">{% trans 'Ver más' %} <i class="fas fa-chevron-right"></i></h5>
-            </a>
-        </div>
-
-    </div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade right" id="{{ item.id|slugify }}-{{ item.nombre|slugify }}"
-     title="{{ item.solucion.nombre|slugify }}" tabindex="-1"
-     role="dialog" aria-labelledby="myModalLabel"
-     aria-hidden="true"
->
-    <div class="modal-dialog modal-lg item" role="document">
-        <!--Content-->
-        <div class="modal-content">
-            <!--Header-->
-            <div class="modal-header color-1-odecopack">
-                <h2 class="modal-title w-100 h2-responsive" id="myModalLabel"><strong>
-                    {% if LANGUAGE_CODE == 'en' %}
-                        {% if item.nombre_en %}
-                            {{ item.nombre_en|upper }}
-                        {% else %}
-                            {{ item.nombre|upper }}
-                        {% endif %}
-                    {% else %}
-                        {{ item.nombre|upper }}
-                    {% endif %}
-                </strong>
-                </h2>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <!--Body-->
-            <div class="modal-body">
-                {% if LANGUAGE_CODE == 'en' %}
-                    {% if item.mas_en %}
-                        {{ item.mas_en|safe }}
-                    {% else %}
-                        {{ item.mas|safe }}
-                    {% endif %}
-                {% else %}
-                    {{ item.mas|safe }}
-                {% endif %}
-                {% with imagenes_lista=item.mis_imagenes.all|dictsort:"orden" %}
-                    {% if imagenes_lista %}
-                        <h4 class="h4-responsive mt-2">{% trans 'Galería' %}</h4>
-                        <div class="pl-4 pr-4">
-                            <div class="galeria">
-                                <div class="mdb-lightbox">
-                                    <div class="row">
-                                        {% for imagen in imagenes_lista %}
-                                            {% if imagen.imagen %}
-                                                {% if imagen.marca_agua == 1 %}
-                                                    {% generateimage 'webpage:watermark' source=imagen.imagen as imagen_procesada %}
-                                                {% elif imagen.marca_agua == 2 %}
-                                                    {% generateimage 'webpage:watermark_orange' source=imagen.imagen as imagen_procesada %}
-                                                {% else %}
-                                                    {% generateimage 'webpage:normal' source=imagen.imagen as imagen_procesada %}
-                                                {% endif %}
-
-                                                <figure class="col-4 col-md-2 p-1 m-0">
-                                                    <a href="{{ imagen_procesada.url }}"
-                                                       data-size="{{ imagen_procesada.width|stringformat:"d" }}x{{ imagen_procesada.height|stringformat:"d" }}">
-                                                        <div class="view overlay hm-white-slight z-depth-2">
-                                                            <img data-src="{{ imagen.imagen_thumbnail.url }}"
-                                                                    {% if LANGUAGE_CODE == 'en' %}
-                                                                        {% if imagen.alt_seo_en %}
-                                                                 alt="{{ imagen.alt_seo_en }}"
-                                                                        {% else %}
-                                                                            {% if imagen.alt_seo %}
-                                                                 alt="{{ imagen.alt_seo }}"
-                                                                            {% endif %}
-                                                                        {% endif %}
-                                                                    {% else %}
-                                                                        {% if imagen.alt_seo %}
-                                                                 alt="{{ imagen.alt_seo }}"
-                                                                        {% endif %}
-                                                                    {% endif %}
-                                                            >
-                                                        </div>
-                                                    </a>
-                                                    <div class="caption">
-                                                        <h3>
-                                                            {% if LANGUAGE_CODE == 'en' %}
-                                                                {% if item.nombre_en %}
-                                                                    {{ item.nombre_en }}
-                                                                {% else %}
-                                                                    {{ item.nombre }}
-                                                                {% endif %}
-                                                            {% else %}
-                                                                {{ item.nombre }}
-                                                            {% endif %}
-                                                        </h3>
-                                                        {% if LANGUAGE_CODE == 'en' %}
-                                                            {% if imagen.descripcion_en %}
-                                                                <p>{{ imagen.descripcion_en }}</p>
-                                                            {% else %}
-                                                                <p>{{ imagen.descripcion }}</p>
-                                                            {% endif %}
-                                                        {% else %}
-                                                            <p>{{ imagen.descripcion }}</p>
-                                                        {% endif %}
-                                                    </div>
-                                                </figure>
-                                            {% endif %}
-                                        {% endfor %}
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endwith %}
-                {% with videos_list=item.mis_videos.all|dictsort:"orden" %}
-                    {% if videos_list %}
-                        <h4 class="h4-responsive mt-2">{% trans 'Videos' %}</h4>
-                        <div class="row">
-                            {% for video in videos_list %}
-                                <div class="col-12 col-md-6 col-lg-4 p-1 m-0">
-                                    <div class="embed-responsive embed-responsive-16by9">
-                                        <iframe class="embed-responsive-item p-0"
-                                                title="{{ video.item_solucion.nombre }}-{{ video.id }}"
-                                                data-src="{{ video.video }}?rel=0&amp;showinfo=0"
-                                                frameborder="0"
-                                                allowfullscreen>
-                                        </iframe>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                {% endwith %}
-                {% with documentos_list=item.mis_documentos.all|dictsort:"orden" %}
-                    {% if documentos_list %}
-                        <h4 class="h4-responsive mt-2">{% trans 'Recursos' %}</h4>
-                        <ul>
-                            {% for documento in documentos_list %}
-                                <li>
-                                    <a href="{{ documento.documento.url }}"
-                                       target="_blank"
-                                    >
-                                        {{ documento.nombre|title }} - <i class="{{ documento.icono }}"
-                                                                          aria-hidden="true"></i>
-                                        <small>({{ documento.documento.size|filesizeformat }})</small>
-                                    </a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    {% endif %}
-                {% endwith %}
-            </div>
-            <!--Footer-->
-            <div class="modal-footer">
-                <button type="button" class="btn color-1-odecopack" data-dismiss="modal">{% trans 'Cerrar' %}</button>
-            </div>
-        </div>
-        <!--/.Content-->
-    </div>
-</div>
-<!-- Modal -->
+{% include 'web/soluciones/item_card.html' with item=item %}
+{% include 'web/soluciones/item_modal_card.html' with item=item %}
